# jaymd96-fmp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  spec.md
docs/: api-reference.md  architecture.md  features.md  getting-started.md  historical-data.md  index.md  query-builder.md  syncing-data.md
src/fmp/: __init__.py  _cache.py  _config.py  _exceptions.py  _http.py  _ontology.py  _query.py  _store.py  _sync.py  client.py
src/fmp/_endpoints/: analyst.py  bulk.py  charts.py  commodities.py  company.py  cot.py  crypto.py  dcf.py  directory.py  earnings.py  economics.py  esg.py  etf_funds.py  financials.py  forex.py  fundraisers.py  indexes.py  insider.py  institutional.py  market_hours.py  market_performance.py  news.py  quotes.py  search.py  sec_filings.py  senate.py  technical.py  transcripts.py
src/fmp/_features/: __init__.py  _base.py  _post_compute.py  analyst.py  cash_flow_features.py  composite.py  dividend.py  dupont.py  earnings_quality.py  efficiency.py  esg.py  event_driven.py  growth.py  historical.py  insider.py  institutional.py  leverage.py  liquidity.py  macro.py  momentum.py  per_share.py  profitability.py  risk.py  sector_relative.py  technical.py  valuation.py
tests/: conftest.py  test_bulk_helpers.py  test_cache.py  test_client.py  test_features.py  test_features_comprehensive.py  test_http.py  test_ontology.py  test_post_compute.py  test_query.py  test_store.py  test_sync.py
tests/test_endpoints/: test_financials.py  test_quotes.py
