[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jaymd96-fmp"
version = "0.8.2"
description = "Python client for the Financial Modeling Prep API with DuckDB caching"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "James", email = "jaymd96@users.noreply.github.com" }]
keywords = ["finance", "api", "fmp", "stock", "market", "duckdb", "cache"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25",
    "duckdb>=1.0",
]

[project.optional-dependencies]
polars = ["polars>=1.0"]
pandas = ["pandas>=2.0"]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "polars>=1.0",
]

[project.urls]
Homepage = "https://github.com/jaymd96/jaymd96-fmp"
Repository = "https://github.com/jaymd96/jaymd96-fmp"
Issues = "https://github.com/jaymd96/jaymd96-fmp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/fmp"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
